Fix #114. Prevent overflow in react-select.

--- a/src/scss/components/_editor.scss
+++ b/src/scss/components/_editor.scss
@@ -32,6 +32,7 @@
 
 	.value {
 		display: flex;
+		min-width: 0; // Prevent overflow
 
 		@media (min-width: $bp-md) {
 			flex: 1 1 0;
