--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -34,6 +34,7 @@ label {
 
 .input-group {
 	position: relative;
+	min-width: 0; // Needed for react-select inside
 
 	.icon-spin {
 		position: absolute;
